--- a/package.json
+++ b/package.json
@@ -14,6 +14,10 @@
   },
   "author": "Pablo Berganza <pablo@berganza.dev>",
   "license": "MIT",
+  "files": [
+    "dist",
+    "typings/chai"
+  ],
   "devDependencies": {
     "@rollup/plugin-commonjs": "^21.0.1",
     "@rollup/plugin-node-resolve": "^13.1.3",
