feat: fix types

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,9 +9,7 @@
     "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true,
     "typeRoots": ["./typings"],
-    "declaration": true,
-    "declarationMap": true,
-    "declarationDir": "./dist/types"
+    "declaration": false
   },
   "include": ["src", "tests"],
   "files": [
